--- a/myFirstHtml.html
+++ b/myFirstHtml.html
@@ -4,21 +4,14 @@
         <title>
            Or Ben Zikry
         </title>
+        <link rel="stylshhet" href="ortry.css">
+
     </head>
 
     <body>
-       <h1 id="myHeader" style="color: skyblue ;font-size: 90px;" "><center> Welcome To the Good Life !</center></h1>
-       <center><button onclick="displayResult()">Im going out</button> </center>
-       <center><script>
-        function displayResult() {
-        document.getElementById("myHeader").innerHTML = <center>"Have a nice day!"</center>;
-        }
-        </script></center>
-        
-       <p><center>My First Website</center></p>
-       <center>
-           <img src="IMG-20180512-WA0074.jpg" alt="Picture not found" width="600" height="600">
-       </center>
+       <a href="https://www.w3schools.com/" target="_blanck">Visit W3Schools.com!</a>
+       <p>hello</p>
+
 
     </body>
 </html>
